# m2_hw13_django

./: .env_example  README.md  pyproject.toml
project/project/: settings.py
project/quotes/: urls.py  utils.py  views.py
project/quotes/templates/quotes/: base.html  index.html
project/users/: forms.py  urls.py  views.py
project/users/migrations/: 0001_initial.py  0002_customuser.py  0003_remove_quote_author_remove_quote_user_delete_author_and_more.py  0004_delete_customuser.py
project/users/static/users/: style.css
project/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_done.html  signup.html
